...
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/addHouseToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <include
                android:id="@+id/actionBar"
                layout="@layout/add_house_toolbar_layout" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

        <ScrollView
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/apartment_name_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">
...
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/dog_tag" />


                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
...
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/location_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">
...
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/address" />


                    <EditText
                        android:id="@+id/locationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
...
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/price_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">
...
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/piggy_bank" />


                    <EditText
                        android:id="@+id/priceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
...
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/description_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">
...
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/description" />


                    <EditText
                        android:id="@+id/desciptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
...
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/add_image_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">
...
                        android:hint="@string/hint_add_image"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/add_image_button"
                        android:contentDescription="@string/image"
                        android:layout_width="24sp"
                        android:layout_height="24sp"
                        android:background="@drawable/plus_button"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
...
