<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/removeHouseRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16sp"
    tools:context=".adminMode.addHouse.AddHouseActivity"
    tools:listitem="@layout/remove_house_list_content"
    app:layoutManager="LinearLayoutManager">

</android.support.v7.widget.RecyclerView>
